Adding important shift to db table from addShift.html now works

--- a/Schedule/templates/baseShift.html
+++ b/Schedule/templates/baseShift.html
@@ -272,9 +272,9 @@
                 </tr>
     
                 <tr>
-                    <td><input id="skillName" type="text" value="{% block content %}{% endblock content %}"></td>
-                    <td><input id="role" type="text"></td>
+                    <td><input id="shiftName" type="text" value="{% block content %}{% endblock content %}"></td>
                     <td><input id="importance" type="text"></td>
+                    <td><input id="maxHours" type="text"></td>
                 </tr>
                 
             </table>
