Created Add new employee table under react/new design

--- a/Schedule/templates/baseEmployeeData.html
+++ b/Schedule/templates/baseEmployeeData.html
@@ -73,7 +73,7 @@
     <br />
         <table id = "extremes">
             <tr>
-                <td><input" type="text">Shortest Shift (in hours)</td>
+                <td>Shortest Shift (in hours)</td>
                 <td><text>Longest Shift (in hours)</text></td>
                 <td><text>Minimum Hours Per Week</text></td>
                 <td><text>Maximum Hours Per Week</text></td>
