Can now add and edit important shifts from new front end

--- a/Schedule/static/src/components/BaseEmployeeDataTable/BaseEmployeeDataTable.css
+++ b/Schedule/static/src/components/BaseEmployeeDataTable/BaseEmployeeDataTable.css
@@ -27,6 +27,10 @@
     background-color: #F4572F;
     border-color: #F4572F;
 }
+#addNew {
+    background-color: #F4572F;
+    border-color: #F4572F;
+}
 
 /* 
 #4C5DDD
