--- a/Schedule/static/src/components/TopNavbar/StickyNavbar.css
+++ b/Schedule/static/src/components/TopNavbar/StickyNavbar.css
@@ -3,12 +3,15 @@
     color: #fff;
     /* border-radius: 0 0 50px 50px; */
 }
+
 .navbar-brand {
-    color: #fff!important;
-    margin-right: 50px!important;
-    font-size: 25px!important;
+    color: #fff !important;
+    margin-right: 50px !important;
+    font-size: 25px !important;
 }
-.nav-link {
-    color: #E4E6F7!important;
-    font-size: 18px!important;
+
+.nav-link a {
+    color: #E4E6F7 !important;
+    font-size: 18px !important;
+    text-decoration: none;
 }
