Add Employee button on EmployeeTable page now takes user to add new employee page

--- a/Schedule/static/src/components/EmployeeTable/EmployeeTable.css
+++ b/Schedule/static/src/components/EmployeeTable/EmployeeTable.css
@@ -18,8 +18,12 @@
 #addEmployee {
     background-color: #F4572F;
     border-color: #F4572F;
+    
 }
-
+#addEmpLink {
+    color: #fff !important;
+    text-decoration: none;
+}
 /* 
 #4C5DDD
 #1720F5
