Added shifts table which lists all shifts and lets user select one to edit or add a new shift. Added link to shifts table to TopNavbar

--- a/Schedule/static/src/components/EmployeeTable/EmployeeTable.css
+++ b/Schedule/static/src/components/EmployeeTable/EmployeeTable.css
@@ -15,12 +15,12 @@
     color:#fff;
 }
 
-#addEmployee {
+#addNew {
     background-color: #F4572F;
     border-color: #F4572F;
     
 }
-#addEmpLink {
+#linkAddNew {
     color: #fff !important;
     text-decoration: none;
 }
