Makes skill page time input tables run vertically rather than horizontally

--- a/Schedule/static/src/components/BaseEmployeeDataTable/BaseEmployeeDataTable.css
+++ b/Schedule/static/src/components/BaseEmployeeDataTable/BaseEmployeeDataTable.css
@@ -16,7 +16,7 @@
 }
 
 .table.table.table-striped > tbody > tr > td {
-    background-color: #F8F8F8;
+    background-color: #ffffff;
 }
 /* .table.table.table-striped > tbody > tr > td > input{ */
     /* width:75%; */
