--- a/Schedule/static/src/components/TopNavbar/StickyNavbar.css
+++ b/Schedule/static/src/components/TopNavbar/StickyNavbar.css
@@ -1,5 +1,5 @@
 .topNavbar {
-    background-color: #4C5DDD;
+    background-color: #394de4;
     color: #fff;
     /* border-radius: 0 0 50px 50px; */
 }
